--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -57,7 +57,7 @@
         android:layout_height="48dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="@string/nameHint"
         android:importantForAutofill="no"
         android:inputType="text"
         android:minHeight="48dp"
@@ -77,7 +77,7 @@
         android:layout_marginTop="36dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:hint="@string/amount"
+        android:hint="@string/amountHint"
         android:importantForAutofill="no"
         android:inputType="number"
         android:minHeight="48dp"
@@ -88,13 +88,12 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/name_id"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.075" />
 
     <TextView
         android:id="@+id/date_id"
         android:layout_width="130dp"
         android:layout_height="48dp"
-        android:background="@drawable/edit_text_background"
         android:clickable="false"
         android:ems="10"
         android:focusable="false"
@@ -104,8 +103,10 @@
         android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintBottom_toTopOf="@+id/notes_id"
         app:layout_constraintEnd_toStartOf="@+id/time_id"
+        app:layout_constraintHorizontal_bias="0.595"
         app:layout_constraintStart_toEndOf="@+id/amount_id"
-        app:layout_constraintTop_toBottomOf="@+id/name_id" />
+        app:layout_constraintTop_toBottomOf="@+id/name_id"
+        app:layout_constraintVertical_bias="0.485" />
 
     <EditText
         android:id="@+id/time_id"
@@ -125,10 +126,10 @@
         android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintBottom_toTopOf="@+id/notes_id"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintHorizontal_bias="0.989"
+        app:layout_constraintHorizontal_bias="0.992"
         app:layout_constraintStart_toEndOf="@+id/amount_id"
         app:layout_constraintTop_toBottomOf="@+id/name_id"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.311" />
 
     <EditText
         android:id="@+id/notes_id"
@@ -137,10 +138,10 @@
         android:layout_marginTop="36dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:hint="@string/notes"
+        android:hint="@string/phoneHint"
         android:importantForAutofill="no"
-        android:inputType="text"
-        android:minHeight="43dp"
+        android:inputType="number"
+        android:minHeight="48dp"
         android:paddingStart="@dimen/padding_edit_text"
         android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -148,7 +149,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/amount_id"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.100" />
 
     <TextView
         android:id="@+id/testText_id"
@@ -172,7 +173,7 @@
         app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/notes_id"
-        app:layout_constraintVertical_bias="0.196" />
+        app:layout_constraintVertical_bias="0.279" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_left"
@@ -192,23 +193,25 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="Namn"
+        android:text="@string/name"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/name_id"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/topbarLayout"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1" />
 
     <TextView
         android:id="@+id/numberOfPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="11dp"
-        android:text="Antal gäster"
+        android:text="@string/amount"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/amount_id"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -220,12 +223,30 @@
         android:id="@+id/dateAndTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="8dp"
-        android:text="Datum och tid"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="11dp"
+        android:text="@string/datetime"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/date_id"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toEndOf="@+id/numberOfPeople"
-        app:layout_constraintTop_toBottomOf="@+id/name_id" />
+        app:layout_constraintTop_toBottomOf="@+id/name_id"
+        app:layout_constraintVertical_bias="1" />
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/phone"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/notes_id"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/amount_id"
+        app:layout_constraintVertical_bias="1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
