--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -76,7 +76,7 @@
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:hint="@string/time"
+        android:hint="@string/timeHint"
         android:importantForAutofill="no"
         android:inputType="date"
         android:minHeight="48dp"
