--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -58,7 +58,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="4dp"
-            android:text="Back"
+            android:text="@string/back"
             android:textColor="@color/black"
             app:backgroundTint="@color/appOrange"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,19 +66,16 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <EditText
+    <TextView
         android:id="@+id/date_choice"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:background="@drawable/edit_text_background"
         android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:hint="@string/timeHint"
         android:importantForAutofill="no"
-        android:inputType="date"
         android:minHeight="48dp"
         android:paddingStart="@dimen/padding_edit_text"
         android:paddingEnd="@dimen/padding_edit_text"
